preview employee details and reviews about this employee

--- a/src/containers/employees/styles.scss
+++ b/src/containers/employees/styles.scss
@@ -24,3 +24,22 @@
   color: #FFF !important;
    background-color: #00BCD4 !important;
 }
+.employeeWrapper {
+  background-color: #FAFAFA;
+  padding: 20px;
+  height: 220px;
+}
+.profilePic {
+  float: left;
+  margin-right: 20px;
+  height: 215px;
+}
+
+.largeFont {
+  font-size: 24px;
+}
+
+.mb {
+  display: block;
+  margin-bottom: 5px;
+}
